tests/ui/image_pipeline_requires_output_contract.stderr
error[E0599]: no method named `run_blocking` found for struct `ImagePipeline<State>` in the current scope
 --> tests/ui/image_pipeline_requires_output_contract.rs:5:28
  |
5 |     let _output = pipeline.run_blocking(Sink::memory())?;
  |                            ^^^^^^^^^^^^ method not found in `ImagePipeline`
